<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sudoku!!!!!</string>
    <string name="main_title">Android Sudoku. Rated MA for Blood and Gore!</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
	<string name="about_label">About</string>
	<string name="exit_label">Escape!</string>
	<string name="menu_settings">Settings</string>
	<string name="about_title">About Android Sudoku</string>
	<string name="about_text">\
Sudoku is a logic-based number placement puzzle.
Starting with a partially completed 9x9 grid, the
objective is to fill the grid so that each row,
each column, and each of the 3x3 boxes (also called
<i>blocks</i>) contains the digits 1 to 9 exactly once.
</string>

	<string name="settings_label">Settings For Blood!!!!!</string>
    <string name="settings_title">Sudoku settings!</string>
    <string name="settings_shortcut">s</string>
    <string name="music_title">Death Music</string>
	<string name="music_summary">Play Death Music</string>
    <string name="hints_title">Hints for Wimps</string>
    <string name="hints_summary">Show hints for wimpy players during play</string>
    
    <string name="new_game_title">Difficulty</string>
    <string name="easy_label">Wimpy</string>
    <string name="medium_label">Decent</string>
    <string name="hard_label">Kamikazi!!!(Hard)</string>
    
     <string name="game_title">Sudoku!!! The Wrath of Con!!!</string>
     <string name="no_moves_label">No moves.</string>
      <string name="keypad_title">Keypad</string>
    
</resources>